# easmx

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
src/: asmx.c  asmx.h  asmz80.c  main.c
test/: testit
